[tool.poetry]
name = "ehdtd"
version = "0.2.7"
description = "Ehdtd - cryptoCurrency Exchange history data to database"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rmalvarezkai/ehdtd"

[tool.poetry.dependencies]
python = "^3.9"
importlib = "^1.0.4"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
thread6 = "^0.2.0"
pymysql = "^1.1.0"
schedule = "^1.2.1"
logging = "^0.4.9.6"
ccxw = "^0.2.0"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
