[tool.poetry]
name = "ehdtd"
version = "0.2.32"
description = "Ehdtd - cryptoCurrency Exchange history data to database"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rmalvarezkai/ehdtd"

[tool.poetry.dependencies]
python = "^3.11"
importlib = "^1.0.4"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
thread6 = "^0.2.0"
pymysql = "^1.1.1"
schedule = "^1.2.2"
logging = "^0.4.9.6"
ccxw = "^0.2.28"
pandas = "^2.2.3"
ccxt = "^4.4.50"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
ipykernel = "^6.29.5"
sympy = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
