[tool.poetry]
name = "ehdtd"
version = "0.2.37"
description = "Ehdtd - cryptoCurrency Exchange history data to database"
authors = ["Ricardo Marcelo Alvarez <rmalvarezkai@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rmalvarezkai/ehdtd"

[tool.poetry.dependencies]
python = "^3.13"
importlib = "^1.0.4"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
thread6 = "^0.2.0"
pymysql = "^1.1.2"
schedule = "^1.2.2"
logging = "^0.4.9.6"
ccxw = "^0.2.32"
pandas = "^2.3.3"
ccxt = "^4.5.17"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
pytest = "^9.0.0"
pytest-xdist = "^3.8.0"
ipykernel = "^7.1.0"
sympy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
